--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.42.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide": "^0.372.0",
