--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5"
